--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/Dashboard/Dashboard.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/Dashboard/Dashboard.razor
@@ -4,32 +4,48 @@
 @inject TokenProvider TokenProvider
 @inject NavigationManager NavigationManager
 
-<div id="overlay" class="overlay"></div>
-<div class="container-fluid p-5">
-    <div class="row">
-        <div class="form-group col-md-12">
-            <div class="breadcrumb-container">
-                <a id="toggle-sidebar" class="btn btn-outline-secondary btn-sm breadcrumb-button" href="#"><i class="fa fa-bars"></i></a>
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item" active>@LanguageHelper.GetTitle(langQueryList, 10121)</li>
-                </ol>
-            </div>
-        </div>
-    </div>
+    <Breadcrumb>
+        <BreadcrumbItem>
+            <BreadcrumbLink>@LanguageHelper.GetTitle(langQueryList, 10121)</BreadcrumbLink>
+        </BreadcrumbItem>
+    </Breadcrumb>
 
-    <div class="row">
-        <div class="form-group col-md-12">
-            <div class="col-md-12 text-center">
-                <a href="/TaskGroup/CreateOrEdit" class="btn btn-primary btn-lg"><i class="fa fa-clipboard-list"></i>&nbsp;@LanguageHelper.GetTitle(langQueryList, 10113)</a>
-                &nbsp;&nbsp;
-                <a href="/TaskGroup/TaskGroups" class="btn btn-success btn-lg"><i class="fa fa-tasks"></i>&nbsp;@LanguageHelper.GetTitle(langQueryList, 10112)</a>
-                &nbsp;&nbsp;
-                <button type="button" class="btn btn-info btn-lg"><i class="fa fa-address-card"></i>&nbsp;@LanguageHelper.GetTitle(langQueryList, 10807)</button>
-                &nbsp;&nbsp;
-                <button type="button" class="btn btn-warning btn-lg"><i class="fa fa-users"></i>&nbsp;@LanguageHelper.GetTitle(langQueryList, 10408)</button>
-            </div>
-        </div>
-    </div>
+    <Row>
+        <Column ColumnSize="ColumnSize.IsFull" Class="text-center">
+            <Button Color="Color.Primary" To="TaskGroup/CreateOrEdit"><Icon Name="@("fa-clipboard-list")"/> @LanguageHelper.GetTitle(langQueryList, 10113)</Button>
+            <Button Color="Color.Success" To="TaskGroup/TaskGroups"><Icon Name="@("fa-tasks")" /> @LanguageHelper.GetTitle(langQueryList, 10112)</Button>
+            <Button Color="Color.Info"><Icon Name="@("fa-address-card")" /> @LanguageHelper.GetTitle(langQueryList, 10807)</Button>
+            <Button Color="Color.Warning"><Icon Name="@("fa-users")" /> @LanguageHelper.GetTitle(langQueryList, 10408)</Button>
+        </Column>
+    </Row>
+
+
+@*<div id="overlay" class="overlay"></div>*@
+@*<div class="container-fluid p-5">*@
+    @*<div class="row">*@
+        @*<div class="form-group col-md-12">*@
+          @*  <div class="breadcrumb-container">*@
+            @*    <a id="toggle-sidebar" class="btn btn-outline-secondary btn-sm breadcrumb-button" href="#"><i class="fa fa-bars"></i></a>*@
+              @*  <ol class="breadcrumb">*@
+                @*    <li class="breadcrumb-item" active>@LanguageHelper.GetTitle(langQueryList, 10121)</li>*@
+                @*</ol>*@
+            @*</div>*@
+        @*</div>*@
+    @*</div>*@
+
+    @*<div class="row">*@
+      @*  <div class="form-group col-md-12">*@
+        @*    <div class="col-md-12 text-center">*@
+          @*      <a href="/TaskGroup/CreateOrEdit" class="btn btn-primary btn-lg"><i class="fa fa-clipboard-list"></i>&nbsp;@LanguageHelper.GetTitle(langQueryList, 10113)</a>*@
+            @*    &nbsp;&nbsp;*@
+              @*  <a href="/TaskGroup/TaskGroups" class="btn btn-success btn-lg"><i class="fa fa-tasks"></i>&nbsp;@LanguageHelper.GetTitle(langQueryList, 10112)</a>*@
+                @*&nbsp;&nbsp;*@
+                @*<button type="button" class="btn btn-info btn-lg"><i class="fa fa-address-card"></i>&nbsp;@LanguageHelper.GetTitle(langQueryList, 10807)</button>*@
+                @*&nbsp;&nbsp;*@
+                @*<button type="button" class="btn btn-warning btn-lg"><i class="fa fa-users"></i>&nbsp;@LanguageHelper.GetTitle(langQueryList, 10408)</button>*@
+            @*</div>*@
+        @*</div>*@
+    @*</div>*@
 
     @*@if (Model.taskGroupSummaryList.TaskGroupSummarys.Any())
         {
@@ -85,7 +101,7 @@
                 }
             }
         }*@
-</div>
+@*</div>*@
 
 @code {
     LangQueryList langQueryList { get; set; }
