--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarGeneral.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarGeneral.razor
@@ -1,6 +1,4 @@
-﻿<li class="header-menu">
-    <span>@LanguageHelper.GetTitle(langQueryList, 10103)</span>
-</li>
+﻿<BarLabel>@LanguageHelper.GetTitle(langQueryList, 10103)</BarLabel>
 <SideBarDashboard />
 <SideBarClient />
 <SideBarTeam />
