--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarLogin.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarLogin.razor
@@ -1,16 +1,10 @@
-﻿<div class=" sidebar-item sidebar-menu">
-    <ul>
-        <li class="header-menu">
-            <span>Access</span>
-        </li>
-        <li>
-            <a href="/login">
-                <i class="fas fa-sign-in-alt"></i>Login
-            </a>           
-        </li>
-    </ul>
-</div>
+﻿<BarItem>
+    <BarLink To="login">
+        <BarIcon IconName="IconName.LockOpen" />
+        Login
+    </BarLink>
+</BarItem>
 
 @code {
-
+    
 }
