--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarMenu.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarMenu.razor
@@ -1,9 +1,5 @@
-﻿<div class=" sidebar-item sidebar-menu">
-    <ul>
-        <SideBarGeneral />
-        <SideBarAdmin />
-    </ul>
-</div>
+﻿<SideBarGeneral />
+<SideBarAdmin />
 
 @code {
 
