--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarSetting.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarSetting.razor
@@ -1,24 +1,22 @@
-﻿@inject NavigationManager NavigationManager
-
-<li class="sidebar-dropdown @PageHelper.IsSelected(currentRoute:NavigationManager.ToBaseRelativePath(NavigationManager.Uri), root:"Setting", page:"", cssClass:"active", cssClassAlt:"")">
-    <a href="#">
-        <i class="fa fa-tools"></i>
-        <span class="menu-text">@LanguageHelper.GetTitle(langQueryList, 10118)</span>
-    </a>
-    <div class="sidebar-submenu" style="@PageHelper.IsSelected(currentRoute:NavigationManager.ToBaseRelativePath(NavigationManager.Uri), root:"Setting", page:"", cssClass:"display: block;", cssClassAlt:"")">
-        <ul>
-            <li>
-                <a href="/Setting/SystemSetting">@LanguageHelper.GetTitle(langQueryList, 10123)</a>
-            </li>
-            <li>
-                <a href="/Setting/Language">@LanguageHelper.GetTitle(langQueryList, 10119)</a>
-            </li>
-            <li>
-                <a href="/Setting/UserSetting">@LanguageHelper.GetTitle(langQueryList, 10122)</a>
-            </li>
-        </ul>
-    </div>
-</li>
+﻿<BarItem>
+    <BarDropdown>
+        <BarDropdownToggle>
+            <BarIcon IconName="@("fa-tools")" />
+            @LanguageHelper.GetTitle(langQueryList, 10118)
+        </BarDropdownToggle>
+        <BarDropdownMenu>
+            <BarDropdownItem To="setting/systemsetting">
+                @LanguageHelper.GetTitle(langQueryList, 10123)
+            </BarDropdownItem>
+            <BarDropdownItem To="setting/language">
+                @LanguageHelper.GetTitle(langQueryList, 10119)
+            </BarDropdownItem>
+            <BarDropdownItem To="setting/usersetting">
+                @LanguageHelper.GetTitle(langQueryList, 10122)
+            </BarDropdownItem>
+        </BarDropdownMenu>
+    </BarDropdown>
+</BarItem>
 
 @code {
     [CascadingParameter(Name = "langQueryList")] LangQueryList langQueryList { get; set; }
