--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarTask.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarTask.razor
@@ -1,21 +1,19 @@
-﻿@inject NavigationManager NavigationManager
-
-<li class="sidebar-dropdown @PageHelper.IsSelected(currentRoute:NavigationManager.ToBaseRelativePath(NavigationManager.Uri), root:"Task", page:"", cssClass:"active", cssClassAlt:"")">
-    <a href="#">
-        <i class="fa fa-tasks"></i>
-        <span class="menu-text">@LanguageHelper.GetTitle(langQueryList, 10111)</span>
-    </a>
-    <div class="sidebar-submenu" style="@PageHelper.IsSelected(currentRoute:NavigationManager.ToBaseRelativePath(NavigationManager.Uri), root:"Task", page:"", cssClass:"display: block;", cssClassAlt:"")">
-        <ul>
-            <li>
-                <a href="/TaskGroup/TaskGroups">@LanguageHelper.GetTitle(langQueryList, 10112)</a>
-            </li>
-            <li>
-                <a href="/TaskGroup/CreateOrEdit">@LanguageHelper.GetTitle(langQueryList, 10113)</a>
-            </li>
-        </ul>
-    </div>
-</li>
+﻿<BarItem>
+    <BarDropdown>
+        <BarDropdownToggle>
+            <BarIcon IconName="@("fa-tasks")" />
+            @LanguageHelper.GetTitle(langQueryList, 10111)
+        </BarDropdownToggle>
+        <BarDropdownMenu>
+            <BarDropdownItem To="taskgroup/taskgroups">
+                @LanguageHelper.GetTitle(langQueryList, 10112)
+            </BarDropdownItem>
+            <BarDropdownItem To="taskgroup/createoredit">
+                @LanguageHelper.GetTitle(langQueryList, 10113)
+            </BarDropdownItem>
+        </BarDropdownMenu>
+    </BarDropdown>
+</BarItem>
 
 @code {
     [CascadingParameter(Name = "langQueryList")] LangQueryList langQueryList { get; set; }
