--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/_Imports.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/_Imports.razor
@@ -1,4 +1,8 @@
-﻿@using System.Net.Http
+﻿@using Blazorise
+@using Blazorise.Sidebar
+@using Blazorise.Icons
+@using Blazorise.DataGrid
+@using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
@@ -12,9 +16,11 @@
 @using PanacheSoftware.UI.Client.Blazor.Shared.Table
 @using PanacheSoftware.UI.Client.Blazor.Pages.Dashboard
 @using PanacheSoftware.UI.Client.Blazor.Pages.Client
+@using PanacheSoftware.UI.Client.Blazor.Pages.Team
 @using PanacheSoftware.Core.Domain.API.Language
 @using PanacheSoftware.UI.Client.Blazor.Helpers
 @using PanacheSoftware.UI.Client.Blazor.Data
 @using PanacheSoftware.Http
 @using PanacheSoftware.Core.Types
 @using PanacheSoftware.Core.Domain.API
+@using PanacheSoftware.Core.Domain.UI.DataTable
