--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/MainLayout.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/MainLayout.razor
@@ -1,39 +1,56 @@
 ﻿@inherits LayoutComponentBase
 @inject IJSRuntime JSRuntime
-<div class="page-wrapper default-theme sidebar-bg bg1 toggled border-radius-on">
+
+<Layout Sider="true">
+    <LayoutSider>
+        <LayoutSiderContent>
+            <SideBar />
+        </LayoutSiderContent>
+    </LayoutSider>
+    <Layout>
+        <LayoutContent>
+            <Container Fluid="true" Margin="Margin.Is4.FromTop">
+                @Body
+            </Container>
+        </LayoutContent>
+    </Layout>
+</Layout>
+
+
+@*<div class="page-wrapper default-theme sidebar-bg bg1 toggled border-radius-on">*@
     @*@await Component.InvokeAsync("SideBar")*@
-    <SideBar />
+    @*<SideBar />*@
     <!-- page-content  -->
-    <main class="page-content">
+    @*<main class="page-content">
         @Body
-    </main>
+    </main>*@
     <!-- page-content" -->
-</div>
+@*</div>*@
 <!-- page-wrapper -->
 
 @code {
-    protected override async Task OnAfterRenderAsync(bool firstRender)
-    {
-        if (firstRender)
-        {
-            await JSRuntime.InvokeAsync<IJSObjectReference>("import", "/js/jquery.js");
+    //protected override async Task OnAfterRenderAsync(bool firstRender)
+    //{
+    //    if (firstRender)
+    //    {
+    //        await JSRuntime.InvokeAsync<IJSObjectReference>("import", "/js/jquery.js");
 
-            //await JSRuntime.InvokeAsync<IJSObjectReference>("import", "/js/popper.min.js");
+    //        //await JSRuntime.InvokeAsync<IJSObjectReference>("import", "/js/popper.min.js");
 
-            await JSRuntime.InvokeAsync<IJSObjectReference>("import", "/js/bootstrap.js");
-            await JSRuntime.InvokeAsync<IJSObjectReference>("import", "/js/sidebar/jquery.mCustomScrollbar.concat.min.js");
-            await JSRuntime.InvokeAsync<IJSObjectReference>("import", "/js/sidebar/sidebar-main.js");
+    //        await JSRuntime.InvokeAsync<IJSObjectReference>("import", "/js/bootstrap.js");
+    //        await JSRuntime.InvokeAsync<IJSObjectReference>("import", "/js/sidebar/jquery.mCustomScrollbar.concat.min.js");
+    //        await JSRuntime.InvokeAsync<IJSObjectReference>("import", "/js/sidebar/sidebar-main.js");
 
-            //await JSRuntime.InvokeAsync<IJSObjectReference>("import", "/js/datatables/jquery.dataTables.min.js");
-            //await JSRuntime.InvokeAsync<IJSObjectReference>("import", "/js/datatables/dataTables.bootstrap4.min.js");
-            //await JSRuntime.InvokeAsync<IJSObjectReference>("import", "/js/datatables/responsive.bootstrap4.min.js");
-            //await JSRuntime.InvokeAsync<IJSObjectReference>("import", "/js/datatables/dataTables.responsive.min.js");
-            //await JSRuntime.InvokeAsync<IJSObjectReference>("import", "/js/panache/pl-datatable.js");
+    //        //await JSRuntime.InvokeAsync<IJSObjectReference>("import", "/js/datatables/jquery.dataTables.min.js");
+    //        //await JSRuntime.InvokeAsync<IJSObjectReference>("import", "/js/datatables/dataTables.bootstrap4.min.js");
+    //        //await JSRuntime.InvokeAsync<IJSObjectReference>("import", "/js/datatables/responsive.bootstrap4.min.js");
+    //        //await JSRuntime.InvokeAsync<IJSObjectReference>("import", "/js/datatables/dataTables.responsive.min.js");
+    //        //await JSRuntime.InvokeAsync<IJSObjectReference>("import", "/js/panache/pl-datatable.js");
 
-            //await JSRuntime.InvokeAsync<IJSObjectReference>("import", "/js/datepicker/bootstrap-datepicker.js");
-            //await JSRuntime.InvokeAsync<IJSObjectReference>("import", "/js/panache/pl-forms.js");
+    //        //await JSRuntime.InvokeAsync<IJSObjectReference>("import", "/js/datepicker/bootstrap-datepicker.js");
+    //        //await JSRuntime.InvokeAsync<IJSObjectReference>("import", "/js/panache/pl-forms.js");
 
-            //await JSRuntime.InvokeAsync<IJSObjectReference>("import", "/js/orgchart/jquery.orgchart.min.js");
-        }
-    }
+    //        //await JSRuntime.InvokeAsync<IJSObjectReference>("import", "/js/orgchart/jquery.orgchart.min.js");
+    //    }
+    //}
 }
