--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarClient.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarClient.razor
@@ -1,24 +1,21 @@
-﻿@inject NavigationManager NavigationManager
-
-@*<li class="sidebar-dropdown @Html.IsSelected(root:"Client", page: "", cssClass:"active", cssClassAlt:"")">*@
-<li class="sidebar-dropdown @PageHelper.IsSelected(currentRoute:NavigationManager.ToBaseRelativePath(NavigationManager.Uri), root:"Client", page:"", cssClass:"active", cssClassAlt:"")">
-    <a href="#">
-        <i class="far fa-address-book"></i>
-        <span class="menu-text">@LanguageHelper.GetTitle(langQueryList, 10105)</span>
-    </a>
-    @*<div class="sidebar-submenu" style="@Html.IsSelected(root:"Client", page: "", cssClass:"display: block;", cssClassAlt:"")">*@
-    <div class="sidebar-submenu" style="@PageHelper.IsSelected(currentRoute:NavigationManager.ToBaseRelativePath(NavigationManager.Uri), root:"Client", page:"", cssClass:"display: block;", cssClassAlt:"")">
-        <ul>
-            <li>
-                <a href="/Client/Clients">@LanguageHelper.GetTitle(langQueryList, 10106)</a>
-            </li>
-            <li>
-                <a href="/Client/Index">@LanguageHelper.GetTitle(langQueryList, 10107)</a>
-            </li>
-        </ul>
-    </div>
-</li>
+﻿<BarItem>
+    <BarDropdown>
+        <BarDropdownToggle>
+            <BarIcon IconName="@("fa-address-book")" />
+            @LanguageHelper.GetTitle(langQueryList, 10105)
+        </BarDropdownToggle>
+        <BarDropdownMenu>
+            <BarDropdownItem To="client/clients">
+                @LanguageHelper.GetTitle(langQueryList, 10106)
+            </BarDropdownItem>
+            <BarDropdownItem To="client/index">
+                @LanguageHelper.GetTitle(langQueryList, 10107)
+            </BarDropdownItem>
+        </BarDropdownMenu>
+    </BarDropdown>
+</BarItem>
 
 @code {
+    private bool expandSubNav;
     [CascadingParameter(Name = "langQueryList")] LangQueryList langQueryList { get; set; }
 }
